# DELexplore

./: .claudeignore  .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  ruff.toml
.github/workflows/: test.yml
docs/references/: analysis_pipeline_architecture.md  competitor_analysis_and_decisions.md  corrected_formulas.md  delthit_output_formats.md  dev_environment_setup.md  faver_2019_zscore_method.md  hou_2023_ml_denoising.md  iqbal_2025_del_ml_pipeline.md  pydeseq2_integration.md
src/delexplore/: __init__.py  cli.py
src/delexplore/analyse/: __init__.py  aggregate.py  bb_productivity.py  classify.py  deseq.py  multilevel.py  poisson.py  rank.py  zscore.py
src/delexplore/explore/: __init__.py  cluster.py  dashboard.py  macrocycle.py  properties.py  scaffold.py  structures.py  umap_viz.py
src/delexplore/explore/templates/: dashboard.html
src/delexplore/io/: __init__.py  readers.py  writers.py
src/delexplore/qc/: __init__.py  assess.py  naive.py
src/delexplore/qc/templates/: qc_report.html
src/delexplore/utils/: __init__.py  chemistry.py
tests/: conftest.py  test_aggregate.py  test_bb_productivity.py  test_classify.py  test_cli_integration.py  test_cluster.py  test_dashboard.py  test_deseq.py  test_fixtures.py  test_macrocycle.py  test_mad_zscore_and_frequent_hitters.py  test_multilevel.py  test_naive.py  test_poisson.py  test_properties.py  test_qc.py  test_rank.py  test_readers.py  test_scaffold.py  test_structures.py  test_umap_viz.py  test_zscore.py
tests/benchmarks/: conftest.py  test_synthetic_del.py
tests/data/examples/: config.yaml  counts.txt
tests/data/synthetic/: config.yaml
tests/data/synthetic/blank_1/: counts.txt
tests/data/synthetic/blank_2/: counts.txt
tests/data/synthetic/blank_3/: counts.txt
tests/data/synthetic/target_1/: counts.txt
tests/data/synthetic/target_2/: counts.txt
tests/data/synthetic/target_3/: counts.txt
