[project]
name = "delexplore"
version = "0.1.0"
description = "Statistical analysis, hit ranking, and chemical space exploration of DEL screening data"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "click>=8.0",
    "polars>=0.20",
    "pyarrow>=14.0",
    "scipy>=1.11",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "rdkit>=2023.9",
]

[project.optional-dependencies]
stats = [
    "pydeseq2>=0.4",
    "scikit-learn>=1.3",
]
explore = [
    "umap-learn>=0.5",
    "hdbscan>=0.8",
    "plotly>=5.18",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.8",
]
all = ["delexplore[stats,explore,dev]"]

[project.scripts]
delexplore = "delexplore.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/delexplore"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
